# habeas

./: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  README.md  android_studio_manual_steps.md  docker-compose.e2e.yml  package-lock.json  package.json  test_env.py
.expo/: settings.json
apps/: Makefile  docker-compose.yml  verify_migration.py
apps/backend/: .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  run_migrations.py  test_signup_manual.py
apps/backend/app/: database.py  database_types.py  exceptions.py  main.py
apps/backend/app/models/: __init__.py  admin.py  attorney.py  attorney_court_admission.py  client.py  court.py  court_county.py  district_court_contact.py  emergency_contact.py  example_model.py  ice_detention_facility.py  normalized_address.py  user.py
apps/backend/app/routers/: __init__.py  attorney_router.py  client_router.py  emergency_contact_router.py  example_router.py  health.py  mock_auth_router.py  signup_router.py  user_router.py
apps/backend/app/schemas/: __init__.py  admin.py  attorney.py  attorney_court_admission.py  client.py  court.py  court_county.py  district_court_contact.py  emergency_contact.py  example_schema.py  ice_detention_facility.py  normalized_address.py  signup.py  user.py
apps/backend/app/services/: __init__.py  admission_service.py  auth_service.py  example_service.py
apps/backend/migrations/: env.py
apps/backend/migrations/backup_versions/: 06caa82208d2_create_ice_detention_facilities_table.py  08cf60d4c835_.py  a1b2c3d4e5f6_refactor_models_and_update_relationships.py  d3a7f8c9b2e1_create_normalized_address_and_update_ice_facility.py  initial_schema.py  user_authentication_schema.py
apps/backend/migrations/versions/: 222de4debd43_add_admin_table.py  24c60b83757d_consolidated_schema.py  ab12cd34ef56_add_attorney_court_admissions.py  add_court_counties_table.py  b5586fc66823_make_normalized_address_county_nullable.py  bbde81766990_create_district_court_contacts_and_ice_.py  c2a8e3f9b1d0_create_district_court_contact_table.py  c9f8d1e2a5b4_update_ice_facility_model_fields.py  create_clients_table.py  d3a7f8c9b2e1_create_normalized_address_and_update_ice_facility.py  d603150f160a_create_attorneys_table.py  de9828777a67_merge_heads.py  fix_location_name_length.py  initial_schema.py  phone_length_fix.py
apps/backend/tests/: conftest.py  factories.py  test_example_api.py  test_utils.py
apps/backend/tests/integration/: test_mock_auth_endpoints.py
apps/backend/tests/integration/routers/: test_attorney_admission_endpoints.py  test_signup_endpoints.py
apps/backend/tests/unit/models/: test_attorney_court_admission.py  test_model_constraints.py
apps/backend/tests/unit/schemas/: test_attorney_court_admission.py
apps/backend/tests/unit/services/: test_admission_service.py
docs/: architecture.md  data-ingestion.md  (+3 more)
(+48 files in other folders)
